# AgenticIA

./: agent.ipynb  main.py  pyproject.toml
cvYass/: chroma.sqlite3
vector_store/: chroma.sqlite3
