[project]
name = "agenticia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.11.4",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-postgres>=3.0.4",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
]
